add played flag
